Добавлена функциональность полнотекстового поиска по товарам с использованием TNTSearch. Реализованы компоненты для индексации и поиска, а также обновлены контроллеры и шаблоны для интеграции с пользовательским интерфейсом. Добавлены новые параметры конфигурации и документация по использованию. Эти изменения улучшают поиск товаров и повышают удобство взаимодействия пользователей с системой.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 !/var/cache/.gitkeep
 !/var/log/.gitkeep
 
+# Search indexes
+/var/search/indexes/
+
 # Symfony specific
 /.env.local
 /.env.local.php
