Добавлен модуль Яндекс Карт с контроллером и компонентом для интеграции в Twig. Реализованы правила и интерфейсы для работы с картами, включая поддержку кластеризации и опционального списка пунктов выдачи. Обновлены шаблоны и конфигурация для использования API ключа.

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -3,6 +3,7 @@ twig:
     globals:
         footer_categories: '@App\Service\FooterCategoryService'
         navbar_categories: '@App\Service\NavbarCategoryService'
+        yandex_maps_api_key: '%app.yandex_maps.api_key%'
 
 when@test:
     twig:
