Добавлена поддержка пагинации товаров в категории. Реализована логика для обработки параметров лимита и страницы в контроллерах и репозиториях. Обновлены шаблоны для отображения выбранного лимита и навигации по страницам. Улучшена обработка URL для синхронизации состояния фильтров и лимитов. Добавлены новые изображения для товаров.

--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -15,3 +15,4 @@ api_platform:
         pagination_maximum_items_per_page: '%pagination.max_items_per_page%'
         pagination_client_items_per_page: true
         pagination_client_page: true
+        items_per_page_parameter_name: 'limit'
