--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "pinia": "^3.0.3",
     "reka-ui": "^2.4.1",
     "swiper": "^11.2.10",
+    "preline": "^3.2.1",
+    "nouislider": "^15.8.0",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
     "vue-tsc": "^3.0.5"
