--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@fancyapps/ui": "^6.0.26",
     "@heroicons/vue": "^2.2.0",
     "axios": "^1.7.7",
+    "flyonui": "2.4.1",
     "imask": "^7.6.1",
     "nouislider": "^15.8.0",
     "pinia": "^3.0.3",
