--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "devDependencies": {
     "@hotwired/stimulus": "^3.0.0",
     "@hotwired/turbo": "^7.1.0 || ^8.0",
+    "@iconify-json/tabler": "^1.2.23",
+    "@iconify/tailwind": "^1.2.0",
     "@rollup/rollup-win32-x64-msvc": "^4.46.2",
     "@storybook/addon-a11y": "^8.6.14",
     "@storybook/addon-essentials": "^8.6.14",
