--- a/config/packages/lexik_jwt_authentication.yaml
+++ b/config/packages/lexik_jwt_authentication.yaml
@@ -1,6 +1,6 @@
 lexik_jwt_authentication:
     secret_key: '%env(string:JWT_SECRET)%'
-    token_ttl: 604800 # 7 days
+    token_ttl: '%app.auth.access_ttl%'
     encoder:
         signature_algorithm: HS256
     # Token extractors with deterministic priority. Cookie must win over Authorization header.
@@ -22,3 +22,14 @@ lexik_jwt_authentication:
                 - jwt_s
     # Keep body clean when using cookies (no raw token leakage to JS parts by default)
     remove_token_from_body_when_cookies_used: true
+
+    # Auto-set httpOnly cookies for tokens
+    set_cookies:
+        __Host-acc:
+            lifetime: '%app.auth.access_ttl%'
+            samesite: lax
+            path: '/'
+            domain: null
+            secure: true
+            httpOnly: true
+            partitioned: false
