--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -7,4 +7,10 @@ nelmio_cors:
         expose_headers: ['Link']
         max_age: 3600
     paths:
+        '^/api/customer/auth/':
+            allow_credentials: true
+            allow_origin: ['%env(string:APP_FRONTEND_BASE_URL)%']
+            allow_headers: ['Content-Type', 'Authorization', 'X-Requested-With']
+            allow_methods: ['POST', 'OPTIONS']
+            max_age: 3600
         '^/': null
