--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -11,6 +11,19 @@ security:
                 class: App\Entity\User
                 property: name
     firewalls:
+        api_customer:
+            # Защищённые клиентские эндпойнты под JWT
+            pattern: ^/api/customer
+            stateless: true
+            provider: app_user_provider
+            jwt: ~
+
+        api_customer_auth:
+            # Публичные эндпойнты аутентификации клиента (совпадают с ^/api/customer, но доступ PUBLIC)
+            pattern: ^/api/customer/auth
+            stateless: true
+            security: false
+
         api:
             pattern: ^/api(?!/admin)
             security: false
@@ -41,6 +54,9 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+        # Порядок важен: сначала узкие правила, затем общий публичный ^/api
+        - { path: ^/api/customer/auth, roles: PUBLIC_ACCESS }
+        - { path: ^/api/customer, roles: IS_AUTHENTICATED_FULLY }
         - { path: ^/api/admin, roles: PUBLIC_ACCESS }
         - { path: ^/api, roles: PUBLIC_ACCESS }
         - { path: ^/login$, roles: PUBLIC_ACCESS }
