Обновлена инициализация модульной системы для запуска как до, так и после загрузки DOM. В компоненте аутентификации добавлены обработчики событий для кнопки отправки и улучшена обработка редиректов. Обновлены настройки безопасности для опциональной JWT-аутентификации корзины.

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -31,6 +31,13 @@ security:
             provider: app_user_provider
             jwt: ~
 
+        api_cart:
+            # Корзина: опциональная JWT-аутентификация по cookie для привязки user_id
+            pattern: ^/api/cart
+            stateless: true
+            provider: app_user_provider
+            jwt: ~
+
         api:
             pattern: ^/api(?!/admin)
             security: false
