Добавлены настройки для работы с куки в dev окружении, обновлены конфигурации безопасности с добавлением поддержки JWT и entry point для аутентификации. Реализован новый контроллер для получения заказов пользователя, обновлены миграции для работы с пользователями и заказами, а также улучшена логика слияния корзин для предотвращения конфликтов. Обновлены шаблоны для формы входа.

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -47,6 +47,8 @@ security:
         main:
             lazy: true
             provider: app_user_provider
+            jwt: ~
+            entry_point: form_login
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
