--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.4.2",
         "doctrine/orm": "^3.5.2",
         "lexik/jwt-authentication-bundle": "^3.1.1",
-        "liip/imagine-bundle": "2.12.3",
+        "liip/imagine-bundle": "^2.14",
         "nelmio/cors-bundle": "^2.5",
         "phpdocumentor/reflection-docblock": "^5.6.3",
         "phpstan/phpdoc-parser": "^2.3",
@@ -37,7 +37,7 @@
         "symfony/security-csrf": "7.3.*",
         "symfony/serializer": "7.3.*",
         "symfony/stimulus-bundle": "^2.30",
-        "symfony/string": "7.3",
+        "symfony/string": "^7.3.4",
         "symfony/twig-bundle": "7.3.*",
         "symfony/ux-live-component": "^2.30",
         "symfony/ux-turbo": "^2.30",
@@ -45,7 +45,7 @@
         "symfony/validator": "7.3.*",
         "symfony/webpack-encore-bundle": "^2.3",
         "symfony/yaml": "7.3.*",
-        "teamtnt/tntsearch": "5.0",
+        "teamtnt/tntsearch": "^5.0.2",
         "wamania/php-stemmer": "4.0"
     },
     "config": {
