Добавлен сервис BestsellerService для кеширования бестселлеров, реализована логика инвалидации кеша при изменении сущностей Bestseller. Обновлен контроллер IndexController для получения бестселлеров из кеша и отображения их на странице каталога. Добавлен новый подписчик BestsellerCacheSubscriber для управления кешем. Обновлен репозиторий BestsellerRepository с методом получения продуктов из бестселлеров. Создан шаблон index.html.twig для отображения бестселлеров.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -106,6 +106,9 @@ parameters:
     # Catalog pagination (category page)
     app.pagination.allowed_limits: [10, 20, 30]
     app.pagination.default_limit: 10
+    
+    # Catalog bestsellers cache
+    app.cache.bestsellers.ttl: 14400
 
 services:
     # default configuration for services in *this* file
@@ -378,6 +381,11 @@ services:
             $projectDir: '%kernel.project_dir%'
             $enabled: '%app_theme.enabled%'
         public: true
+
+    # Bestseller service with TTL parameter
+    App\Service\BestsellerService:
+        arguments:
+            $cacheTtl: '%app.cache.bestsellers.ttl%'
 
     # Prefer cookie-based token over Authorization header for JWT extraction
     # Decorate Lexik chain extractor with cookie-first behavior
